[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-budget-aware-code-agent"
version = "0.1.0"
description = "Budget-aware agentic code-review workflow using LangGraph (research prototype)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "langgraph>=0.2",
    "langchain-google-genai>=2.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# E/F: pycodestyle errors + pyflakes (real bugs and unused imports)
# W: pycodestyle warnings
# Excluding I (isort) to avoid reformatting existing import blocks.
select = ["E", "F", "W"]
ignore = [
    "E501",   # line too long — LLM prompt strings are intentionally verbose
]
